--- a/client/resizer_app/index.html
+++ b/client/resizer_app/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resizer_app</title>
+    <title>IMG manipulator</title>
   </head>
   <body>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
+
   </body>
 </html>
